--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header" class="alt">
 				<div class="inner">
 					<h1>鎧瑋的個人網站</h1>
-					<p>A free responsive site template by <a href="https://templated.co">TEMPLATED</a></p>
+					<p>A free responsive site template by TEMPLATED</a></p>
 				</div>
 			</header>
 
