--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 					<section id="intro" class="main">
 						<span class="icon fa-diamond major"></span>
 						<h2>個人自傳</h2>
-						<p> 我的名字叫劉鎧瑋，來自嘉義。家中沒有什麼特別的，最讓我思念的就是我的爺爺，還記得有一次他教我下軍棋，從那天之後我跑去他房間都是去找他下棋，
+						<p><text-align:justify> 我的名字叫劉鎧瑋，來自嘉義。家中沒有什麼特別的，最讓我思念的就是我的爺爺，還記得有一次他教我下軍棋，從那天之後我跑去他房間都是去找他下棋，
 						我覺得很有意思，很像指揮官，需要戰術的感覺，從一開始怎麼玩怎麼輸，漸漸的偶爾會打贏一場，讓我很有成就感。<br />
-						我的專長是寫書法，從小先學硬筆字，到了小學三年級開始學書法，雖然稱不上我的興趣但我不討厭，最開心的時候就是寫春聯的時候，因為代表又平安過了一年，也是新的開始。</p>
+						我的專長是寫書法，從小先學硬筆字，到了小學三年級開始學書法，雖然稱不上我的興趣但我不討厭，最開心的時候就是寫春聯的時候，因為代表又平安過了一年，也是新的開始。</text-align:justify></p>
 						<ul class="actions">
 							
 						</ul>
