--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@
 					</section>
 
 				<!-- Items -->
+					<header id="header" class="alt">
+				<div class="inner">
+					<h1>鎧瑋的個人網站</h1>
+					<p>以下開始介紹</a></p>
+				</div>
+			</header>
 					<section class="main items">
 						<article class="item">
 							<header>
