--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 					<h1>鎧瑋的個人網站</h1>
 					<p>以下開始介紹</a></p>
 				</div>
-			</header>
+			</header></p>
 					<section class="main items">
 						<article class="item">
 							<header>
