--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 					<h1>鎧瑋的個人網站</h1>
 					<p>以下開始介紹</a></p>
 				</div>
-			</header></p>
+			</header></p></p>
 					<section class="main items">
 						<article class="item">
 							<header>
 								<a href="#"><img src="images/001.jpg" alt="" /></a>
 								
 							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+							<p><div style="text-align:justify;">這是高中時寫的春聯，小時候都覺得寫書法很無聊，但還是慢慢的學下去，現在覺得有多一個別人不太會的專長就覺得很不錯！</div></p>
 							<ul class="actions">
 								
 							</ul>
