--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<a href="#"><img src="images/001.jpg" alt="" /></a>
 								
 							</header>
-							<p><div style="text-align:justify;">這是高中時寫的春聯，小時候都覺得寫書法很無聊，但還是慢慢的學下去，現在覺得有多一個別人不太會的專長就覺得很不錯！</div></p>
+							<p><div style="text-align:justify;">這是高中時寫的春聯，小時候都覺得寫書法很無聊，但還是慢慢的學下去，現在覺得有多一個別人不會的專長就覺得很不錯！</div></p>
 							<ul class="actions">
 								
 							</ul>
