--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 								<a href="#"><img src="images/05.jpg" alt="" /></a>
 								
 							</header>
-							<p></p>
+							<p><div style="text-align:justify;">這是我第一次玩虛擬實境，感覺挺棒的，也覺得很有趣，真的很像真的，不過有缺點就是可能會撞到東西，是一個很棒的體驗。</div></p>
 							<ul class="actions">
 								
 							</ul>
