--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 				<!-- Items -->
 					<header id="header" class="alt">
 				<div class="inner">
-					<h1>鎧瑋的個人網站</h1>
-					<p>以下開始介紹</a></p>
+					<h1>生活剪影</h1>
+					<p>以下都是高中的點滴</a></p>
 				</div>
 			</header></p></p>
 					<section class="main items">
