--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#"><img src="images/06.jpg" alt="" /></a>
 								
 							</header>
-							<p>Fusce malesuada efficitur venenatis. Pellentesque tempor leo sed massa hendrerit hendrerit. In sed feugiat est, eu congue elit. Ut porta magna vel felis sodales vulputate. Donec faucibus dapibus lacus non ornare.</p>
+							<p></p>
 							<ul class="actions">
 								
 							</ul>
