--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<!-- CTA -->
 					<section id="cta" class="main special">
 						<h2>以上是我的生活照片</h2>
-						<p><div style="text-align:justify;">雖然高中有摸過一點網頁，但這個還是第一次做，希望未來可以越做越好！
+						<p><div style="text-align:center;">雖然高中有摸過一點網頁，但這個還是第一次做，希望未來可以越做越好！
 						
 						</div></p>
 						<ul class="actions">
