--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
+		<marquee>歡迎我的網頁～</marquee>
 
 		<!-- Header -->
 			<header id="header" class="alt">
