--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
-		<marquee direction="right" height="30" scrollamount="5" behavior="alternate">歡迎來到我的網頁～</marquee>
+		<marquee direction="right" height="30" scrollamount="5" behavior="alternate"><font color="red">歡迎來到我的網頁～</font></marquee>
 
 		<!-- Header -->
 			<header id="header" class="alt">
