--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/04.jpg" alt="" /></a>
+								<a href="#"><img src="images/08.jpg" alt="" /></a>
 								
 							</header>
-							<p><div style="text-align:justify;">現在覺得沒有機會再像高中那樣了，每天從早到晚都在同一個教室，跟同學都比較熟，跟大學不一樣的是，大學同學不一定都一樣，而且頂多是認識但不會像高中一樣認識而且都比較好，重點是都待在同一個班級的那種氣氛，都是難忘的回憶。</div></p>
+							<p><div style="text-align:justify;">這是我養的倉鼠，他叫做檸檬。</div></p>
 							<ul class="actions">
 								
 							</ul>
