--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<section id="intro" class="main">
 						<span class="icon fa-diamond major"></span>
 						<h2>個人自傳</h2>
-						<p><div style="text-align:justify;"> 我的名字叫劉鎧瑋，來自嘉義。興趣是看動漫、玩遊戲。
+						<p><div style="text-align:justify;"> 我的名字叫劉鎧瑋，來自嘉義。興趣是看動漫、玩遊戲，畫畫跟手工。
 						我的專長是寫書法，從小先學硬筆字，到了小學三年級開始學書法，雖然稱不上我的興趣但我不討厭，最開心的時候就是寫春聯的時候，因為代表又平安過了一年，也是新的開始。</div></p>
 						
 
@@ -90,7 +90,7 @@
 
 				<!-- CTA -->
 					<section id="cta" class="main special">
-						<h2>以上是我的生活照片</h2>
+						<h2>以上是我的照片分享</h2>
 						<p><div style="text-align:center;">雖然高中有摸過一點網頁，但這個還是第一次做，希望未來可以越做越好！
 						
 						</div></p>
