--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/05.jpg" alt="" /></a>
+								<a href="#"><img src="images/09.jpg" alt="" /></a>
 								
 							</header>
-							<p> <div style="text-align:justify;"> 這是我第一次玩虛擬實境，感覺挺棒的，也覺得很有趣，真的很像真的，不過有缺點就是可能會撞到東西，是一個很棒的體驗。</div></p>
+							<p> <div style="text-align:justify;"> 這是我無聊畫的，雖然不怎麼好看，但是就是個興趣偶爾畫個開心。</div></p>
 							<ul class="actions">
 								
 							</ul>
