--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						</article>
 						<article class="item">
 							<header>
-								<a href="#"><img src="images/09.jpg" alt="" /></a>
+								<a href="#"><img src="images/09.jpg" height="500"alt="" /></a>
 								
 							</header>
 							<p> <div style="text-align:justify;"> 這是我無聊畫的，雖然不怎麼好看，但是就是個興趣偶爾畫個開心。</div></p>
