--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 								
 							</ul>
 						</article>
-						<article class="item">
+						<article class="item" height="500" >
 							<header>
 								<a href="#"><img src="images/09.jpg" height="500" alt="" /></a>
 								
