--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 						</article>
 						<article class="item">
 							<header style="height:350px">
-								<a href="#"><img src="images/06.jpg" alt="" /></a>
+								<a href="#"><img src="images/11.jpg" alt="" /></a>
 								
 							</header>
-							<p><div style="text-align:justify;"> 園遊會、運動會好像是高中以下的活動了，先來講講為什麼運動會辦在體育場，因為我們學校很小沒有操場，所以運動會都在體育場，算是很特別。運動會的氣氛讓人熱血沸騰，尤其是在大隊接力的時候，無論是參賽的人或是在上面加油的人，都會讓人很緊張，每一個人都是不可或缺的，雖然沒有得名但是是很棒的回憶。</div></p>
+							<p><div style="text-align:justify;"> 這是之前做的手作。</div></p>
 							<ul class="actions">
 								
 							</ul>
