--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						</article>
 						<article class="item">
 							<header style="height:350px">
-								<a href="#"><img src="images/11.jpg" alt="" /></a>
+								<a href="#"><img src="images/12.jpg" alt="" /></a>
 								
 							</header>
 							<p><div style="text-align:justify;"> 這是之前做的手作。</div></p>
@@ -91,7 +91,7 @@
 				<!-- CTA -->
 					<section id="cta" class="main special">
 						<h2>以上是我的照片分享</h2>
-						<p><div style="text-align:center;">雖然高中有摸過一點網頁，但這個還是第一次做，希望未來可以越做越好！
+						<p><div style="text-align:center;"> 自我介紹到此結束，謝謝大家。
 						
 						</div></p>
 						<ul class="actions">
